adds 010 folder and changes to other folders

--- a/008_relative-urls/index.html
+++ b/008_relative-urls/index.html
@@ -16,7 +16,7 @@
 <img src="img/dog.jpg">
 
 <!--relative-->
-<img src="../000_img/dog.jpg">
+<img src="../000_img/pup.jpg">
 
 
 
@@ -28,7 +28,7 @@
 <!--<000_img src="puppy.jpg">-->
 
 <!--&lt;!&ndash;relative&ndash;&gt;-->
-<!--<000_img src="000_img/dog.jpg">-->
+<!--<000_img src="000_img/pup.jpg">-->
 
 <!--&lt;!&ndash;relative&ndash;&gt;-->
 <!--<000_img src="../000_img/pup.jpg">-->
