--- a/009_absolute-urls/index.html
+++ b/009_absolute-urls/index.html
@@ -16,11 +16,13 @@
 <!--relative-->
 <img src="../000_img/pup.jpg">
 
-<!--absolute-->
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Terrier_mixed-breed_dog.jpg/330px-Terrier_mixed-breed_dog.jpg">
+<!--absolute URL-->
+<img src="http://headtotailpetgrooming.weebly.com/uploads/6/0/2/9/60294035/5396236_orig.jpg">
 
 <!--absolute-->
 <img src="/009_absolute-urls/puppy.jpg">
+
+<img src="/000_img/pup.jpg">
 
 </body>
 </html>
